name:                atomo
version:             0.1
synopsis:            Atomo programming language.
homepage:            http://darcsden.com/alex/atomo
license:             BSD3
license-file:        LICENSE
author:              Alex Suraci
maintainer:          i.am@toogeneric.com
category:            Development
build-type:          Simple

cabal-version:       >= 1.2

data-files:          prelude/*.atomo


executable atomo
  hs-source-dirs:     src
  main-is:            Main.hs
  
  ghc-prof-options:   -prof -auto-all -caf-all
  ghc-options:        -O2 -Wall -threaded -fno-warn-unused-do-bind
                      -funfolding-use-threshold=9999

  -- Packages needed in order to build this package.
  build-depends:
    base >= 4,
    bytestring,
    containers,
    directory,
    filepath,
    hashable,
    haskeline,
    mtl,
    parsec >= 3.0.0,
    pretty,
    pretty-show,
    template-haskell,
    time,
    vector
