name:                atomo
version:             0.1
synopsis:            Atomo programming language.
homepage:            http://darcsden.com/alex/atomo
license:             BSD3
license-file:        LICENSE
author:              Alex Suraci
maintainer:          i.am@toogeneric.com
category:            Development
build-type:          Simple

cabal-version:       >= 1.2

data-files:          prelude/*.atomo


library
  hs-source-dirs:    src

  build-depends:
    base >= 4,
    containers,
    directory,
    filepath,
    hashable,
    -- haskeline,
    mtl,
    parsec >= 3.0.0,
    pretty,
    -- pretty-show,
    template-haskell,
    time,
    vector

  exposed-modules:
    Atomo.Debug,
    Atomo.Environment,
    Atomo.Haskell,
    Atomo.Kernel,
    Atomo.Method,
    Atomo.Parser,
    Atomo.Parser.Base,
    Atomo.Parser.Pattern,
    Atomo.Parser.Primitive,
    Atomo.Pretty,
    Atomo.Types,
    Paths_atomo


executable atomo
  hs-source-dirs:    src
  main-is:           Main.hs
  
  ghc-prof-options:  -prof -auto-all -caf-all
  ghc-options:       -O2 -Wall -threaded -fno-warn-unused-do-bind
                     -funfolding-use-threshold=9999

  build-depends:
    base >= 4,
    containers,
    directory,
    filepath,
    hashable,
    haskeline,
    mtl,
    parsec >= 3.0.0,
    pretty,
    pretty-show,
    template-haskell,
    time,
    vector
