name:                atomo
version:             0.1
synopsis:            Atomo programming language.
homepage:            http://darcsden.com/alex/atomo
license:             BSD3
license-file:        LICENSE
author:              Alex Suraci
maintainer:          i.am@toogeneric.com
category:            Development
build-type:          Simple

cabal-version:       >= 1.2


library
  hs-source-dirs:    src

  build-depends:
    base >= 4,
    bytestring,
    containers,
    directory,
    filepath,
    hashable,
    hint,
    parsec >= 3.0.0,
    pretty,
    split,
    template-haskell,
    time,
    transformers,
    vector

  exposed-modules:
    Atomo.Debug,
    Atomo.Environment,
    Atomo.Haskell,
    Atomo.Kernel,
    Atomo.Kernel.Numeric,
    Atomo.Kernel.List,
    Atomo.Kernel.Block,
    Atomo.Kernel.Expression,
    Atomo.Kernel.Concurrency,
    Atomo.Kernel.Message,
    Atomo.Kernel.Comparable,
    Atomo.Kernel.Particle,
    Atomo.Kernel.Pattern,
    Atomo.Kernel.Ports,
    Atomo.Kernel.Time,
    Atomo.Kernel.Bool,
    Atomo.Kernel.Association,
    Atomo.Kernel.Parameter,
    Atomo.Kernel.Exception,
    Atomo.Kernel.Environment,
    Atomo.Method,
    Atomo.Parser,
    Atomo.Parser.Base,
    Atomo.Parser.Pattern,
    Atomo.Parser.Primitive,
    Atomo.Pretty,
    Atomo.Types


executable atomo
  hs-source-dirs:    src
  main-is:           Main.hs
  
  ghc-prof-options:  -prof -auto-all -caf-all
  ghc-options:       -O2 -Wall -threaded -fno-warn-unused-do-bind
                     -funfolding-use-threshold=9999

  c-sources:         src/rts.c

  build-depends:
    base >= 4,
    bytestring,
    containers,
    directory,
    filepath,
    hashable,
    haskeline,
    hint,
    mtl,
    parsec >= 3.0.0,
    pretty,
    pretty-show,
    split,
    template-haskell,
    time,
    transformers,
    vector
